--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                             <div class="content-caption light-content">
                                 <div class="open-project-link">
-                                    <a class="open-project" href="#">ignacio.<br>works</a>
+                                    <a class="open-project" href="">ignacio.<br>works</a>
                                     <h1 class="section-info one_half"></h1>
                                 </div>
 
@@ -103,7 +103,7 @@
 
 
                     <!-- Section Revolución Democratica -->
-                    <div class="section">
+                    <!-- <div class="section">
 
                         <div class="img-container">
                             <div class="section-image" style="background-image: url(images/4a.jpg);">
@@ -133,7 +133,7 @@
 
                         <div class="disable-section"></div>
 
-                    </div>
+                    </div> -->
                     <!--/Section -->
 
 
@@ -181,7 +181,38 @@
 
                     <!--/Section -->
 
+                      <!-- Section Transparencia Proactiva -->
+                      <div class="section" style="z-index:3;">
 
+                        <div class="img-container">
+                            <div class="fullscreen-bg section-image">
+                                <video loop muted autoplay poster="images/2.jpg" class="fullscreen-bg__video">
+                                    <source src="images/TA.webm" type="video/mp4">
+                                </video>
+                            </div>
+
+
+                        </div>
+
+
+                        <div class="gradient"></div>
+
+                        <div class="caption">
+                            <div class="content-caption light-content">
+                                <div class="open-project-link">
+                                    <a class="open-project" href="transparencia.html">Transparencia<br>Proactiva</a>
+
+                                </div>
+
+
+
+                            </div>
+                        </div>
+
+                        <div class="disable-section"></div>
+
+                    </div>
+                    <!--/Section -->
 
                     <!-- Section Mapa Fílmico-->
                     <div class="section">
@@ -216,38 +247,7 @@
                     </div>
                     <!--/Section -->
 
-                    <!-- Section Transparencia Proactiva -->
-                    <div class="section" style="z-index:3;">
-
-                        <div class="img-container">
-                            <div class="fullscreen-bg section-image">
-                                <video loop muted autoplay poster="images/2.jpg" class="fullscreen-bg__video">
-                                    <source src="images/TA.webm" type="video/mp4">
-                                </video>
-                            </div>
-
-
-                        </div>
-
-
-                        <div class="gradient"></div>
-
-                        <div class="caption">
-                            <div class="content-caption light-content">
-                                <div class="open-project-link">
-                                    <a class="open-project" href="transparencia.html">Transparencia<br>Proactiva</a>
-
-                                </div>
-
-
-
-                            </div>
-                        </div>
-
-                        <div class="disable-section"></div>
-
-                    </div>
-                    <!--/Section -->
+                  
 
 
 
