--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
                     <!-- Section Revolución Democratica -->
-                    <!-- <div class="section">
+             <div class="section">
 
                         <div class="img-container">
                             <div class="section-image" style="background-image: url(images/4a.jpg);">
@@ -133,7 +133,7 @@
 
                         <div class="disable-section"></div>
 
-                    </div> -->
+                    </div> 
                     <!--/Section -->
 
 
