--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                                 <div class="open-project-link_x">
                                     <a class="open-project" style="color:rgba(0, 0, 0, 0.7);" target="_blank"
-                                        href="http://asamblea.revoluciondemocratica.cl/">Digital<br>Democracy</a>
+                                        href="#">Digital<br>Democracy</a>
                                 </div>
 
                                 <p class="section-info" style="color:rgba(0, 0, 0, 0.7);">A platform for citizens to
@@ -339,10 +339,10 @@
 
                             <h1>Ignacio Rojas<br></h1>
                             <ul class="socials">
-                                <li><a target="_blank" href="#"><i class="fa fa-email"></i></a></li>
+                                <!-- <li><a target="_blank" href="#"><i class="fa fa-email"></i></a></li>
                                 <li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a target="_blank" href="#"><i class="fa fa-instagram"></i></a></li>
-                                <li><a target="_blank" href="#"><i class="fa fa-chat"></i></a></li>
+                                <li><a target="_blank" href="#"><i class="fa fa-chat"></i></a></li> -->
                             </ul>
 
 
